--- a/src/App.scss
+++ b/src/App.scss
@@ -87,7 +87,7 @@ video {
                     color: white;
                     background: black;
                     height: 40px;
-
+                     border: none;
                     &:hover {
                         background: black;
                     }
